update honeybadger to latest version

--- a/reporter/hb2/internal/honeybadger-go/Makefile
+++ b/reporter/hb2/internal/honeybadger-go/Makefile
@@ -4,6 +4,9 @@ deps:
 	# dependencies
 	go get github.com/pborman/uuid
 	go get github.com/shirou/gopsutil/load
+	# testing libs
+	go get github.com/stretchr/testify/mock
+	go get github.com/stretchr/testify/assert
 
 prepare: deps
 	# needed for `make fmt`
