--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - restore_cache:
+          keys:
+            - dynamodb-installed
       - run:
           name: Install Java
           command: 'sudo apt-get update && sudo apt-get install default-jre default-jdk'
@@ -30,7 +33,14 @@ jobs:
           command: |
               curl -k -L -o dynamodb-local.tgz http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz
               tar -xzf dynamodb-local.tgz
-              java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
+      - save_cache:
+          key: dynamodb-installed
+          paths:
+            - DynamoDBLocal_lib
+            - DynamoDBLocal.jar
+      - run:
+          name: Launch Dynamodb
+          command: java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
           background: true
       - run: go get -v -t -d ./...
       - run:
