--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,31 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - restore_cache:
+          keys:
+            - dynamodb-installed
+      - run:
+          name: Install Java
+          command: 'sudo apt-get update && sudo apt-get install default-jre default-jdk'
+      - run:
+          name: Setup Container
+          command: |
+              test -f DynamoDBLocal.jar || curl -k -L -o dynamodb-local.tgz http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz
+              test -f DynamoDBLocal.jar || tar -xzf dynamodb-local.tgz
+      - save_cache:
+          key: dynamodb-installed
+          paths:
+            - DynamoDBLocal_lib
+            - DynamoDBLocal.jar
+      - run:
+          name: Launch Dynamodb
+          command: java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
+          background: true
       - run: make deps
       - run: go get -v -t -d ./...
-      - run: go test ./...
+      - run:
+          name: Run Tests
+          command: go test ./...
+          environment:
+            AWS_ACCESS_KEY_ID: DUMMY_KEY
+            AWS_SECRET_ACCESS_KEY: DUMMY_SECRET
