--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # NOTE: this file auto-generated from github.com/remind101/engineering/sync_github.rb.
 #       Dont edit this directly as it will be overridden :D
 #
-* ben@remind101.com peterh@remind101.com
+* peterh@remind101.com
