--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,13 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.1
+
+workflows:
+  main:
+    jobs:
+      - build-and-test
+
+
 jobs:
-  build:
+  build-and-test:
     docker:
       # specify the version
       - image: circleci/golang:1.14
