Add go vet to CI, fix errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,4 +24,5 @@ jobs:
     working_directory: /go/src/github.com/remind101/pkg
     steps:
       - checkout
+      - run: go vet ./...
       - run: go test ./...
