updating code owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # NOTE: this file auto-generated from github.com/remind101/stacks/bin/codeowners_to_github
 #       Dont edit this directly as it will be overridden :D
 #
-* peterh@remind101.com andrew@remind101.com
+* peterh@remind101.com
